src/objects/Strategies__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_Time_Range_End__c</fullName>
        <label>Arrival Time Range End</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrival_Time_Range_Start__c</fullName>
        <label>Arrival Time Range Start</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dept_Time_Range_End__c</fullName>
        <label>Dept Time Range End</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dept_Time_Range_Start__c</fullName>
        <label>Dept Time Range Start</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domestic_or_International__c</fullName>
        <label>Domestic or International</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                    <default>true</default>
                    <label>Domestic</label>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Time_Greater_Than__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Flight Time Greater Than</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_to_Client__c</fullName>
        <label>Language to Client</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Peak_High_Volume_Day__c</fullName>
        <label>Related to Peak/High-Volume Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Aicraft_Type__c</fullName>
        <label>Related to Aicraft Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to_Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Arriving_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Arriving Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Strategies (Related to Arriving Airport)</relationshipLabel>
        <relationshipName>Strategies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_CVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to CVP</label>
        <referenceTo>Client_Value_Proposition_del__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Cabin_Type__c</fullName>
        <label>Related to Cabin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cabin_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to_Dept_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Dept Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Itinerary_Type__c</fullName>
        <label>Related to Itinerary Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Way</fullName>
                </value>
                <value>
                    <fullName>Round Trip</fullName>
                </value>
                <value>
                    <fullName>Same-Day Round Trip</fullName>
                </value>
                <value>
                    <fullName>Multi-Segment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to_Leg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Leg</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Operator/Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategies (Related to Operator/Broker)</relationshipLabel>
        <relationshipName>Strategies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Season__c</fullName>
        <label>Related to Season</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUMMER</fullName>
                </value>
                <value>
                    <fullName>WINTER</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to_Subcontracted__c</fullName>
        <label>Related to Subcontracted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to_Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Trip</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Up_Downgrade__c</fullName>
        <label>Related to Up/Downgrade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Downgrade Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Downgrade Not Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Upgrade Guaranteed - Contractual</fullName>
                </value>
                <value>
                    <fullName>Upgrade Guaranteed - Non Contractual</fullName>
                </value>
                <value>
                    <fullName>Upgrade Not Guaranteed - Non Contractual</fullName>
                </value>
                <value>
                    <fullName>Upgrade Not Guaranteed - Contractual</fullName>
                </value>
                <value>
                    <fullName>Request Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Related to Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Non-Guaranteed/Charter</fullName>
                </value>
                <value>
                    <fullName>Shuttle</fullName>
                </value>
                <value>
                    <fullName>Empty Leg</fullName>
                </value>
                <value>
                    <fullName>Aircraft Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_Description__c</fullName>
        <label>Strategy Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_to_Account__c</columns>
        <columns>Related_to_Operator__c</columns>
        <columns>Related_to_Aicraft_Type__c</columns>
        <columns>Related_to_Aircraft__c</columns>
        <columns>Related_to_Dept_Airport__c</columns>
        <columns>Related_to_Arriving_Airport__c</columns>
        <columns>Related_to_Cabin_Type__c</columns>
        <columns>Related_to_Itinerary_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>